Closed Bug 133997 Opened 24 years ago Closed 24 years ago

fix build warnings at nsCSSDeclaration.cpp

Categories

(Core :: Layout: Tables, defect, P4)

x86
Windows 98
defect

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: bernd_mozilla, Assigned: bernd_mozilla)

Details

Attachments

(1 file)

Chris is now the leader at the build warning hall of shame, lets change this.
Attached patch patchSplinter Review
Attachment #76587 - Flags: review+
Comment on attachment 76587 [details] [diff] [review] patch sr=attinasi
Attachment #76587 - Flags: superreview+
Comment on attachment 76587 [details] [diff] [review] patch a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #76587 - Flags: approval+
The patch is in.
Status: NEW → RESOLVED
Closed: 24 years ago
Keywords: patch
Priority: -- → P4
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.0
Marking verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: