bug 133997 - Bernd's patch to fix compiler warnings. a=asa, sr=attinasi, r=karnaze.